[project]
name = "mediaskills"
version = "0.1.0"
description = "Agent Skills for media processing (development tooling)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pytest>=8.0",
    "skills-ref>=0.1.1",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests", "skills"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
